--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 49em) {
+@media only screen and (min-width: 784px) {
     main{
         grid-template-columns: 1fr 1fr 1fr;
         
@@ -22,4 +22,4 @@
     object-fit: none;
     height: 100%;
     
-}
+}  
