--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -1,7 +1,4 @@
-
-
-
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 1000px) {
     main{
         grid-template-columns: 1fr 1fr 1fr;
         
@@ -17,12 +14,15 @@
     #thirds {
         grid-column: 3/4;
         grid-row: 1/1;
-        height: 95%;
+        height: 100%;
+        
+        
     }
     
     #thirds img {
-        object-fit: none;
+        width: 100%;
         height: 100%;
+        object-fit: none;
         
     }  
 }
