--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -4,6 +4,7 @@
         /* grid-template-rows: 1fr 1fr 4fr 4fr; */
         /* grid-template-rows: 1fr 2fr 2fr 1fr; */
         /* background-color: pink; */
+        /* margin: 10px 10px 10px 10px; */
         
         
     }
@@ -17,18 +18,24 @@
     } */
 
 
-
-    #wSHead{
-        grid-row: 2/3;
-
+    h1{
+        font-size: 70px;
     }
+    
+    h2{
+        font-size: 40px;
+    }
+    
+    a, p {
+        font-size: 22px;
+    }
+    
 
     #whiteSpace {
         grid-column: 1/2;
-        height: 95%;
+        height: 100%;
         background-color: purple;
-        /* margin: 15px 2px 15px 2px;
-         */
+        
 
     }
 
@@ -40,7 +47,7 @@
 
     #hick{
         grid-column: 2/3;
-        height: 95%;
+        height: 100%;
         
         
     }
@@ -56,6 +63,7 @@
         width: 100%;
         height: 30%;
         object-fit: cover;
+        
     }
 
    
