--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -1,19 +1,33 @@
-/* body{
-    margin:0 auto;
-} */
+h1{
+    font-size: 40px;
+}
+
+h2{
+    font-size: 30px;
+}
+
+a, p {
+    font-size: 20px;
+    margin: 5px;
+    padding: 5px;
+}
+
+body{
+    margin: 10px 10px 10px 10px;
+    background-color: gray;
+}
 
 main{
     display: grid;
     grid-template-columns: 1fr;
     /* grid-template-rows: 1fr 3fr 3fr 3fr; */
-    /* margin: 10px 20px auto; */
+    margin: 30px 0px 30px;
     /* margin: 0 auto; */
     width: 100%;
     
     
-    place-items: center;
-    text-align: center;
-    gap: 20px;
+    
+    gap: 10px;
 
     
 
@@ -36,15 +50,16 @@ main h2{
     background-color: pink;
 }
 
-main h2, p{
+main h2 a, p{
     text-align: left;
-    padding: 100;
+    padding: 2px;
 }
 
 
 img{
     max-width: 100%;
-    /* padding: 2px 2px 2px 2px; */
+    padding: 5px;
+    margin: 5px;
 }
 
 #top{
@@ -58,14 +73,14 @@ img{
     border-color: purple;
 
     padding: 5px 5px 5px 5px;
-    margin-bottom: 5px;
+    
     
 }
 
 
 #whiteSpace, #hick, #thirds{
     padding: 15px 15px 15px 15px;
-    margin: 0 auto;
+    margin-bottom: 10px;
     grid-gap: 50px;
     background-color: lime;
 
@@ -73,6 +88,7 @@ img{
     border-radius: 10px;
     border-style: solid;
     border-color:darkblue;
+    
 }
 
 
