fonts color and sizing

--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -1,93 +1,85 @@
+
+
+body{
+    background-color:#219ebc;
+}
+
+main{
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    color:#ffb703;
+    gap: 10px;    
+    padding: 2px 2px 2px 2px;
+    
+}
+
+h1, h2 {
+    font-family: 'Merriweather', serif;
+}
+
 h1{
     font-size: 40px;
+    
 }
 
 h2{
     font-size: 30px;
 }
 
-a, p {
+main a, main p {
+    font-family: 'Inter Tight', sans-serif;
     font-size: 20px;
     margin: 5px;
     padding: 5px;
 }
 
-body{
-    margin: 10px 10px 10px 10px;
-    background-color: gray;
-}
-
-main{
-    display: grid;
-    grid-template-columns: 1fr;
-    /* grid-template-rows: 1fr 3fr 3fr 3fr; */
-    margin: 30px 0px 30px;
-    /* margin: 0 auto; */
-    width: 100%;
-    
-    
-    
-    gap: 10px;
-
-    
-
-    /* border: 10px;
-    border-style: solid;
-    border-color:darkblue;
-    border-radius: 25px; */
-
-    
-    padding: 2px 2px 2px 2px;
-    
-}
-
-
-
 main h2{
-    border: 2px;
-    border-style: dotted;
-    border-color:darkorange;
-    background-color: pink;
+    border: 5px;
+    border-style: solid;
+    border-color:#ffb703;
+    background-color:#023047;
 }
 
-main h2 a, p{
+main h2, main p, main a{
     text-align: left;
+    
     padding: 2px;
 }
 
 
+
+
 img{
     max-width: 100%;
-    padding: 5px;
-    margin: 5px;
+    
+    
 }
 
 #top{
-    grid-row: 1/2;
-    background-color: darkblue;
-    color: whitesmoke;
+    
+    background-color: #023047;
+    color: #ffb703;
     text-align: center;
+    margin-bottom: 10px;
 
     border: 10px;
     border-style: solid;
-    border-color: purple;
+    border-color: #ffb703;
 
-    padding: 5px 5px 5px 5px;
+    padding: 5px 
     
     
 }
 
 
 #whiteSpace, #hick, #thirds{
-    padding: 15px 15px 15px 15px;
-    margin-bottom: 10px;
-    grid-gap: 50px;
-    background-color: lime;
-
-    border: 2px;
+    padding: 10px 10px 10px 10px;
+    background-color:gray;
+    border: 5px;
     border-radius: 10px;
     border-style: solid;
-    border-color:darkblue;
+    border-color:#ffb703;
     
 }
 
@@ -96,29 +88,10 @@ img{
 footer {
     background-color: #023047;
     color: #ffb703;
-    display: grid;
-    grid-template-columns: repeat(4fr);
-    grid-template-rows: repeat(3fr);
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    
 }
 
-#footerDate{
-    grid-column: 1/2;
-    text-align: right;
-}
-
-#footerName {
-    grid-column: 2/3;
-    text-align: center;
-}
-
-#footerLocation{
-    grid-column: 3/4;
-    text-align: left;
-}
-
-#lastUpdated {
-    grid-row: 2/3;
-    grid-column: 2/3;
-    text-align: center;
-
-}
