--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -6,24 +6,14 @@
         
     }
 
-    #whiteSpace #hick #thirds{
-        width: 100%;
-        height: 100%;
-    }
+
     
     #thirds {
         grid-column: 3/4;
         grid-row: 1/1;
-        height: 100%;
+        /* height: 100%; */
         
         
     }
-    
-    #thirds img {
-        width: 100%;
-        height: 100%;
-        object-fit: none;
-        
-    }  
-}
 
+}
