--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -1,21 +1,11 @@
 @media only screen and (min-width: 35.5em) {
     main{
         grid-template-columns: 1fr 1fr;
-        /* grid-template-rows: 1fr 1fr 4fr 4fr; */
-        /* grid-template-rows: 1fr 2fr 2fr 1fr; */
-        /* background-color: pink; */
-        /* margin: 10px 10px 10px 10px; */
         
         
     }
 
-    /* header{
-        grid-column: 1/3;   
-        /* justify-self: center;
-        align-self: center;
-        place-content: center;
-        place-items: center; 
-    } */
+
 
 
     h1{
@@ -29,25 +19,12 @@
     a, p {
         font-size: 22px;
     }
-    
-
-    #whiteSpace {
-        grid-column: 1/2;
-        height: 100%;
-        background-color: purple;
-        
-
-    }
-
-    /* #wSDescribe{
-        grid-row: 3/4;
-    } */
 
 
 
     #hick{
         grid-column: 2/3;
-        height: 100%;
+        /* height: 100%; */
         
         
     }
@@ -60,9 +37,10 @@
     }
 
     #thirds img{
+        object-fit:cover;
         width: 100%;
-        height: 30%;
-        object-fit: cover;
+        
+        
         
     }
 
