--- a/lesson3/styles/medium.css
+++ b/lesson3/styles/medium.css
@@ -1,19 +1,5 @@
 @media only screen and (min-width: 32.5em) {
-    /* header{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    h1, #cham{
-        grid-column:2/3;
-        grid-row: 1/2;
-    }
-
-    #domain{
-        grid-column: 1/3;
-        grid-row: 2/3;
-    }*/
+    
 
     nav{
         display: flex;
@@ -22,6 +8,44 @@
         padding: 1%;
         margin: 1%;
     } 
+
+
+
+
+
+
+    /*Audience*/
+
+    #audienceContent{
+        grid-template-columns: 1fr 3fr 1fr;
+
+    }
+
+    #audienceSection, #scenariosSection, #personaSection{
+        grid-column: 2/3;
+    }
+
+    #scenariosSection{
+        grid-row: 2/3;
+    }
+
+    #personaSection{
+        grid-row: 3/4;
+    }
+
+    #audienceContent li{
+        font-size: 20px;
+    }
+
+    #audienceContent h3 {
+        font-size: 22px;
+    }
+
+
+
+
+
+    /*color*/
 
     #sampleContainer{
         display: grid;
@@ -43,8 +67,6 @@
         align-items: center;
         justify-content: center;
         
-        
-
         border: 2%;
         border-style: solid;
         border-color: black;
@@ -57,9 +79,7 @@
         
     }
 
-    /* #blue #red #orange #yellow #lemon{
-        grid-column: 1/5;
-    } */
+    
 
     #blue, #red, #orange, #yellow, #lemon{
         /* grid-column: 1/5;
@@ -101,37 +121,10 @@
         grid-column: 1/5;
         grid-row: 6/7
     }
-    /* #bname{
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-
-    #bhex{
-        grid-column: 2/3;
-        grid-row: 2/3;
-    }
+    
 
 
 
 
-
-    #red{
-        grid-row: 3/4;
-
-    }
-
-    #orange{
-        grid-row: 4/5;
-    }
-
-    #yellow{
-        grid-row: 5/6;
-    }
-
-    #lemon{
-        grid-row: 6/7;
-    } */
-
-
-
+    
 }
