final touches for chamber site

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,14 +1,77 @@
 @media only screen and (min-width: 64rem){
     body{
-
-        background-color: red;
-    }
-
-    #top{
-        grid-template-columns: 1fr 2fr 1fr;
+        display: grid;
+        grid-template-columns: 1fr 8fr 1fr;
+        grid-template-rows: 1fr 3fr 1fr;
+        margin: 1%;
+        
         
     }
 
+    header, main{
+        grid-column: 2/3;
+        border: 5px solid black;
+    }
+
+    /* main{
+        grid-column: 2/3;
+        grid-row: 2/3
+    } */
+    footer{
+        grid-row: 3/4;
+        grid-column: 2/3;
+    }
+
+
+    #topPart{
+        
+        
+        grid-template-columns: 2fr 3fr 1fr;
+        /* display: flex;
+        
+        justify-content: space-between; */
+        
+    }
+
+    #topLogo{
+        max-height: 90px;
+    }
+
+    #city{
+        font-size: 1.5rem;
+    }
+    
+    #title{
+        font-size: 1.1rem;
+    }
+
+
+    nav{
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    nav a{
+        grid-column:unset;
+    }
+
+    #primaryNav{
+        order: 3;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        
+    }
+
+    #primaryNav a{
+        display: block;
+
+    }
+
+    /* #socialLinks{
+        grid-column: 3/4;
+    } */
 
 
 /* 
@@ -48,11 +111,11 @@
 #hamburgerButton span:nth-child(2) {display: block; color: red;}
 
 
-#primaryNav{
+/* #primaryNav{
     
     display: flex;
 
-}
+} */
 
 
 #bottomPart{
@@ -97,6 +160,7 @@
         order: 3;
         grid-column: 3/4;
         grid-row: 1/ 4;
+        grid-template-columns: 1fr;
 
     }
 
@@ -122,6 +186,69 @@
         grid-column: 2/ span 1;
         grid-row: 3/4;
     }
+
+
+
+
+
+    /*----------------------footer--------------*/
+
+
+
+    #topFooter{
+        grid-template-columns: 2fr 1fr;
+    }
+
+    #topFootFirst{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        
+        
+    }
+
+    
+    #footerLogoName{
+        text-align: left;
+    }
+
+
+    #bottomFooter{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        text-align: center;
+        justify-content: space-around;
+        padding: 2%;
+        
+    }
+
+    #footerTitle{
+        grid-column: 1/2;
+        /* border-right: 10px solid lime; */
+        text-align: right;
+    }
+
+    #footerName{
+        font-size: 1rem;
+    }
+
+    #projectName{
+        
+        text-align: center;
+    }
+
+
+    #lastUpdated{
+        letter-spacing: normal;
+        grid-column: 4/5;
+    }
+
+
+
+
+
+
+
+
+
 
 
 
