color update on small css

--- a/mediaQueryFolder/styles/small.css
+++ b/mediaQueryFolder/styles/small.css
@@ -6,7 +6,7 @@
 
     #containerOne{
         background-color: orange;
-        color: black;
+        color: red;
         text-align: center;
     }
 
