--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -2,12 +2,15 @@
     body{
         display: grid;
         grid-template-columns: 1fr 8fr 1fr;
-        grid-template-rows: 1fr 3fr 1fr;
+        /* grid-template-rows: 1fr 3fr 1fr; */
         margin: 1%;
-        
-        
+
+
     }
 
+    #top{
+        grid-template-rows: 1fr 1fr;
+    }
     header, main{
         grid-column: 2/3;
         border: 5px solid black;
@@ -24,23 +27,27 @@
 
 
     #topPart{
-        
-        
+
+
         grid-template-columns: 2fr 3fr 1fr;
         /* display: flex;
-        
+
         justify-content: space-between; */
-        
+
     }
 
     #topLogo{
         max-height: 90px;
     }
 
+    #headLogo{
+        grid-column: 1/2;
+    }
+
     #city{
         font-size: 1.5rem;
     }
-    
+
     #title{
         font-size: 1.1rem;
     }
@@ -61,7 +68,7 @@
         grid-row: 1/2;
         display:grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        
+
     }
 
     #primaryNav a{
@@ -74,11 +81,11 @@
     } */
 
 
-/* 
+/*
     nav #primaryNav{
         grid-column: 2/3;
         display:flex;
-        
+
     }
 
     #socialLinks{
@@ -105,14 +112,14 @@
     #hamburgerButton{
         display: none;;
     }
-    
+
 
 #hamburgerButton span:nth-child(1) {display: none;}
 #hamburgerButton span:nth-child(2) {display: block; color: red;}
 
 
 /* #primaryNav{
-    
+
     display: flex;
 
 } */
@@ -121,7 +128,7 @@
 #bottomPart{
     grid-column: 1/4;
     grid-row: 2/3;
-    
+
 }
 
 
@@ -135,7 +142,7 @@
 
     main{
         grid-template-columns: 1fr 3fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        /* grid-template-rows: 1fr 1fr 1fr; */
         gap: 5px;
     }
 
@@ -149,30 +156,43 @@
     }
 
     #heroSection{
+        /* display: grid;
+        grid-template-columns: 1fr;
+        position: relative; */
         order: 2;
         grid-column: 2/ span 1;
         grid-row: 1/3;
     }
 
+    #heroSection img{
+        height: 100%;
+        width: 100%;
+    }
+
 
     #spotlightSection{
-        flex-direction: column;
+        /* flex-direction: column; */
         order: 3;
         grid-column: 3/4;
-        grid-row: 1/ 4;
+        grid-row: 1/4;
         grid-template-columns: 1fr;
 
     }
 
     #spotThree{
-        display: block;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    #spotThree img{
+        width: 100%;
     }
 
     #weatherSection{
         order: 4;
         grid-column: 1/2;
         grid-row: 2/3;
-    
+
     }
 
     #joinSection{
@@ -202,11 +222,11 @@
     #topFootFirst{
         display: grid;
         grid-template-columns: 1fr 2fr;
-        
-        
+
+
     }
 
-    
+
     #footerLogoName{
         text-align: left;
     }
@@ -217,7 +237,7 @@
         text-align: center;
         justify-content: space-around;
         padding: 2%;
-        
+
     }
 
     #footerTitle{
@@ -231,7 +251,7 @@
     }
 
     #projectName{
-        
+
         text-align: center;
     }
 
