--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -259,6 +259,7 @@ main{
 
 #heroImg{
     width: 100%;
+    height: auto;
     
     z-index: 1;
     position: relative;
@@ -276,12 +277,12 @@ main{
 #heroSection .joinButton{
     position: relative;
     font-size: 2em;
-    left: 20%;
+    left: 10%;
     bottom: 20%;
     
     background-color: limegreen;
-    grid-column: 1/2;
-    grid-row: 1/2;
+    /* grid-column: 1/2;
+    grid-row: 1/2; */
     margin: 2%;
     padding: 2%;
     border-radius: 10px;
@@ -296,11 +297,49 @@ main{
 }
 
 
+/*---------event Section-------*/
+
+#eventContainer{
+    font-size: 1.5em;
+}
+
+#eventContainer button{
+    background-color: #003049;
+    color:#eae2b7;
+    font-size: 1em;
+}
+
+
+#clickMoreInfo span:nth-child(1) {display: block;}
+#clickMoreInfo span:nth-child(2) {display: none;}
+#clickMoreInfo span:nth-child(3) {display: none;}
+
+#clickMoreInfo.active span:nth-child(1) {display: none;}
+#clickMoreInfo.active span:nth-child(2) {display: block; margin-bottom: 2%;}
+#clickMoreInfo.active span:nth-child(3) {display: block; font-size: .7em;}
+
+
+
+
+
+
+
+
+
+/*-------Join Section---------*/
+
+
 #joinSection{
     display: none;
 }
 
 /*-------------------Weather Section----------------*/
+
+#weatherContainer{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 .weatherContainerTop{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -330,6 +369,20 @@ main{
     text-align: center;
 }
 
+/*-----------------News Section----------*/
+#newsSection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1.25em;
+}
+
+
+
+
+
+
+
 
 /*--------------------SpotlightSection--------------*/
 
@@ -343,6 +396,7 @@ main{
     /* background-color: red; */
     padding: 2%;
     gap: 10px;
+    font-size: 1.25em;
     
     
     
