--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -156,14 +156,15 @@
     }
 
     #heroSection{
-        /* display: grid;
+        display: grid;
         grid-template-columns: 1fr;
-        position: relative; */
+        
         order: 2;
         grid-column: 2/ span 1;
         grid-row: 1/3;
     }
 
+    
     #heroSection img{
         height: 100%;
         width: 100%;
