--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -196,7 +196,7 @@
 
     }
 
-    #joinSection{
+    #joinSection{ 
         order: 5;
         grid-column: 1/2;
         grid-row: 3/4;
@@ -270,7 +270,25 @@
 
 
 
+    /*-----------Discover Page----------*/
 
 
+    #discoverContent{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .visitInfo{
+        grid-column: 1/3;
+    }
+
+    .stats{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .schoolCounter{
+        flex-direction: column;
+    }
 
 }
