join page css update in progress

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -165,10 +165,10 @@
     }
 
     
-    #heroSection img{
+    /* #heroSection img{
         height: 100%;
         width: 100%;
-    }
+    } */
 
 
     #spotlightSection{
@@ -292,3 +292,7 @@
     }
 
 }
+
+
+/*-------------------JOIN PAGE---------------*/
+
