--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -13,7 +13,7 @@ body{
     text-align: center;
     
 }
-
+ 
 
 /*-------------Top section---------------*/
 #meeting{
@@ -121,20 +121,6 @@ nav div{display:none;}
 nav div.open{display: flex; flex-direction: column;}
 
 
-
-/* nav button{
-    margin: .2rem 2vw;
-    font-size: 2rem;
-    background: transparent;
-
-}
-
-nav #hamburgerButton span:nth-child(1) {display: block;}
-nav #hamburgerButton span:nth-child(2) {display: none;}
-
-nav #hamburgerButton.open span:nth-child(1) {display: none;}
-nav #hamburgerButton.open span:nth-child(2) {display: block; color: red;} */
-
 #top button{
     
     /*This is for putting button on the right side*/
@@ -223,27 +209,15 @@ nav a.active{
 /*----------------Main-------------*/
 
 main{
-    /* display: grid;
-    grid-template-columns: 1fr; */
     border: 3px;
     border-style: solid;
     border-color: black;
-    /* background-color: lime; */
     gap: 10px;
     margin-bottom: 40px;
     margin: 2%;
     padding: 2%;
-    /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr;  */
-    /* border: 3px;
-    border-style: solid;
-    border-color: black; */
-    /* background-color: pink; */
-
     
-
 }
-
-
 
 
 
@@ -261,8 +235,8 @@ main{
     
     
 
-
 }
+
 
 #heroSection{
     position: relative;
@@ -304,10 +278,7 @@ main{
     font-size: 1.5em;
     right: 20px;
     bottom: 20px;
-    
     background-color: limegreen;
-    /* grid-column: 1/2;
-    grid-row: 1/2; */
     margin: 2%;
     padding: 2%;
     border-radius: 10px;
@@ -431,17 +402,7 @@ main{
 
 }
 
-/* #spotlightSection p{
-   
-    margin: 0;
-    border: 1px;
-    border-style: solid;
-    border-color: black;
-    
 
-    
-    
-} */
 
 #spotOne, #spotTwo, #spotThree{
     display:grid;
@@ -459,15 +420,7 @@ main{
     width: 100%;
 }
 
-/* #spotTwo{
-    display:grid;
-    grid-template-columns: 1fr;
-    
-} */
 
-/* #spotTwo img{
-    width: 100%;
-} */
 
 
 #spotThree {
@@ -481,20 +434,12 @@ main{
 /*-------------Footer--------------*/
 
 footer{
-    /* display: flex;
-    flex-direction: column;
-    background-color: lime;
-    justify-content: center;
-    align-items: center; */
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
-    
     margin: 1%;
     padding: 1%;
     
-
-
 }
 
 #topFooter{
@@ -532,34 +477,6 @@ footer{
 
 
 /*------------------Discover page---------*/
-
-/* .carousel{
-    position: relative;
-    
-}
-
-.slide {
-    position: absolute;
-    inset: 0;
-    opacity: .5;
-}
-
-.slide[data-active] {
-    opacity: 1;
-}
-
-.slide > img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.backButton{
-    position: absolute;
-    background-color: #003049;
-    z-index: 2;
-} */
-
 
 
 #discoverContent{
@@ -615,13 +532,8 @@ footer{
 }
 
 .statsSection{
-    /* display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    background-color: pink; */
     text-align: center;
     align-items: center;
-    
     width: 100%;
 }
 
@@ -629,7 +541,6 @@ footer{
     align-items: center;
     justify-content: center;
     text-align: center;
-    /* border: 5px solid blue; */
     margin: 10px 0px 10px 0px;
 }
 
@@ -678,10 +589,7 @@ footer{
     margin: 2%;
 }
 
-/* .schoolCounter{
-    display: flex;
-    justify-content: space-between;
-} */
+
 
 .gallery{
     border: 5px solid black;
@@ -706,3 +614,87 @@ footer{
     width: 100%;
     
 }
+
+
+
+
+/*--------------------JOIN PAGE---------------------------*/
+.joinMain{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: unset;
+}
+
+form{
+    width: 100%;
+}
+
+form label, form legend{
+    text-align: left;
+    background-color: lime;
+    width: 100%;
+    /* padding: .5rem; */
+}
+
+form input{
+    height: 40px;
+    width: 100%;
+    
+}
+/* fieldset{
+    margin: 20px;
+    padding: 20px;
+} */
+
+
+
+label{
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    width: 100%;
+}
+
+.submitBtn{
+    margin: 5%;
+    border-radius: 5px;
+    height: 44px;
+
+}
+
+
+
+
+
+.memberLevels{
+    background-color: #fcbf49;
+    color:#eae2b7;
+    border: 5px solid black;
+    
+}
+
+.card{
+    margin: 2%;
+    padding: 2%;
+    border: 2px solid blue;
+
+}
+
+.cardTop{
+    background-color: #003049;
+    color:#eae2b7;
+    margin: 2%;
+    padding: 2%;
+}
+
+.cardBottom{
+    margin: 5%;
+    padding: 5%;
+    background-color: #d62828;
+}
+
+.card p{
+    text-align: left;
+}
+
